# rust-urlshortener

./: Cargo.toml
migrations/: 20240316121256_links.up.sql  20240316143200_link_statistics.down.sql  20240316143200_link_statistics.up.sql  20240316165629_settings.up.sql
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs
src/controllers/: health.rs  mod.rs
src/repositories/: link_repository.rs
src/server/: app.rs  mod.rs
