[package]
name = "rust-urlshortener"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "urlshortener"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
metrics = "0.22.1"
metrics-exporter-prometheus = "0.13.1"
axum-prometheus = "0.6.1"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.197",features = ["derive"] }
serde_json = "1.0.114"
url = "2.5.0"
base64 = "0.22.0"
rand = "0.8.5"
sha3 = "0.10.8"